# helios-base

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  NEWS  NEWS.en  README  README.en  README.md  cmake-config.h.in  configure.ac
src/: CMakeLists.txt  Makefile.am  bhv_basic_move.cpp  bhv_basic_offensive_kick.cpp  bhv_basic_tackle.cpp  bhv_go_to_static_ball.cpp  bhv_goalie_basic_move.cpp  bhv_goalie_chase_ball.cpp  bhv_goalie_free_kick.cpp  bhv_penalty_kick.cpp  bhv_set_play.cpp  bhv_set_play_free_kick.cpp  bhv_set_play_goal_kick.cpp  bhv_set_play_indirect_free_kick.cpp  bhv_set_play_kick_in.cpp  bhv_set_play_kick_off.cpp  bhv_their_goal_kick_move.cpp  coach.conf  intention_receive.cpp  intention_wait_after_set_play_kick.cpp  keepaway.sh.in  keepaway_communication.cpp  main_coach.cpp  main_player.cpp  main_trainer.cpp  neck_default_intercept_neck.cpp  neck_offensive_intercept_neck.cpp  player.conf  player.sh.in  reconnect.sh.in  role_center_back.cpp  role_center_forward.cpp  role_defensive_half.cpp  role_keepaway_keeper.cpp  role_offensive_half.cpp  role_sample.cpp  role_side_back.cpp  role_side_forward.cpp  role_side_half.cpp  sample_coach.cpp  (+9 more)
src/basic_actions/: CMakeLists.txt  Makefile.am  arm_off.h  basic_actions.cpp  bhv_before_kick_off.cpp  bhv_before_kick_off.h  bhv_body_neck_to_ball.h  bhv_body_neck_to_point.h  bhv_go_to_point_look_ball.h  body_advance_ball2009.h  body_clear_ball.h  body_dribble2008.cpp  body_go_to_point.cpp  body_go_to_point.h  body_go_to_point_dodge.cpp  body_go_to_point_dodge.h  body_hold_ball.h  body_kick_one_step.h  body_turn_to_ball.h  intention_dribble2008.cpp  intention_dribble2008.h  intention_time_limit_action.cpp  neck_scan_players.cpp  neck_scan_players.h  neck_turn_to_ball_and_player.cpp  neck_turn_to_ball_or_scan.h  neck_turn_to_goalie_or_scan.cpp  neck_turn_to_low_conf_teammate.cpp  neck_turn_to_player_or_scan.h  view_normal.h  view_wide.h
src/chain_action/: actgen_direct_pass.cpp  actgen_shoot.cpp  action_state_pair.h  bhv_chain_action.cpp  bhv_normal_dribble.cpp  bhv_pass_kick_find_receiver.cpp  bhv_strict_check_shoot.cpp  body_force_shoot.cpp  clear_generator.cpp  cooperative_action.h  cross_generator.h  field_analyzer.cpp  neck_turn_to_receiver.cpp  positioning.cpp  positioning.h  predict_player_object.h  predict_state.h  self_pass_generator.cpp  shoot_generator.cpp  strict_check_pass_generator.cpp  tackle_generator.cpp
src/coach/: CMakeLists.txt  Makefile.am  main_coach.cpp  sample_coach.cpp  sample_coach.h  sample_freeform_message.cpp  sample_freeform_message.h
src/formations-bpn/: defense-formation.conf  goal-kick-opp.conf  goal-kick-our.conf  goalie-catch-opp.conf  goalie-catch-our.conf  kickin-our-formation.conf
src/formations-dt/: defense-formation.conf  goal-kick-opp.conf  goalie-catch-opp.conf  goalie-catch-our.conf  goalie-formation.conf  normal-formation.conf  offense-formation.conf  setplay-opp-formation.conf
src/formations-keeper/: before-kick-off.conf  goalie-formation.conf  indirect-freekick-opp-formation.conf  kickin-our-formation.conf  normal-formation.conf  offense-formation.conf  setplay-our-formation.conf
src/formations-taker/: before-kick-off.conf  goal-kick-our.conf  goalie-catch-opp.conf  goalie-catch-our.conf  indirect-freekick-opp-formation.conf  indirect-freekick-our-formation.conf  normal-formation.conf
src/grpc/: CMakeLists.txt  grpc_agent.cpp  grpc_agent.h  grpc_agent_coach.cpp  grpc_agent_coach.h  grpc_agent_player.cpp  grpc_agent_player.h  grpc_agent_trainer.cpp  grpc_agent_trainer.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h  state_generator.cpp  state_generator.h
src/grpc-client/: grpc_agent.cpp  grpc_agent.h  grpc_agent_coach.cpp  grpc_agent_coach.h  grpc_agent_player.cpp  grpc_agent_player.h  grpc_agent_trainer.cpp  grpc_agent_trainer.h  grpc_client.cpp  grpc_client.h  grpc_client_coach.cpp  grpc_client_coach.h  grpc_client_player.cpp  grpc_client_player.h  grpc_client_trainer.cpp  grpc_client_trainer.h  state_generator.cpp  state_generator.h
src/grpc-generated/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/obsolete/: reconnect.sh.in  start-oz.sh
src/planner/: actgen_simple_dribble.cpp  action_generator.h  neck_turn_to_receiver.cpp  short_dribble_generator.cpp  tackle_generator.cpp
src/player/: CMakeLists.txt  Makefile.am  bhv_basic_move.cpp  bhv_basic_tackle.cpp  bhv_custom_before_kick_off.cpp  bhv_goalie_basic_move.cpp  bhv_goalie_chase_ball.cpp  bhv_goalie_free_kick.cpp  bhv_penalty_kick.cpp  communication.h  intention_receive.cpp  intercept_evaluator_sample.cpp  intercept_evaluator_sample.h  keepaway_communication.cpp  main_player.cpp  neck_default_intercept_neck.cpp  neck_goalie_turn_neck.cpp  neck_offensive_intercept_neck.cpp  role_center_back.cpp  role_center_forward.cpp  role_defensive_half.cpp  role_goalie.cpp  role_goalie.h  role_keepaway_keeper.cpp  role_keepaway_taker.cpp  role_offensive_half.cpp  role_sample.cpp  role_side_back.cpp  role_side_half.cpp  sample_communication.cpp  sample_freeform_message_parser.cpp  sample_freeform_message_parser.h  sample_player.cpp  sample_player.h  soccer_role.h  strategy.cpp  strategy.h  view_tactical.cpp
src/rpc-client/: grpc_agent.cpp  grpc_agent.h  grpc_agent_coach.cpp  grpc_agent_coach.h  grpc_agent_player.cpp  grpc_agent_player.h  grpc_agent_trainer.h  rpc-agent.h  rpc-client.h  rpc_agent.cpp  rpc_agent.h  rpc_agent_coach.cpp  rpc_agent_coach.h  rpc_agent_player.cpp  rpc_agent_player.h  rpc_agent_trainer.cpp  rpc_agent_trainer.h  state_generator.cpp  state_generator.h
src/setplay/: bhv_prepare_set_play_kick.cpp  bhv_set_play_free_kick.cpp  bhv_set_play_goal_kick.cpp  bhv_set_play_indirect_free_kick.cpp  bhv_set_play_kick_in.cpp  bhv_set_play_kick_off.cpp
src/thrift-client/: thrift_agent.cpp  thrift_agent.h  thrift_agent_coach.cpp  thrift_agent_coach.h  thrift_agent_player.cpp  thrift_agent_player.h  thrift_agent_trainer.cpp  thrift_agent_trainer.h  thrift_client.cpp  thrift_client.h  thrift_client_coach.cpp  thrift_client_coach.h  (+6 more)
ssil/: start  (+5 more)
(+143 files in other folders)
