
add_library(basic_actions STATIC
  basic_actions.cpp
  bhv_before_kick_off.cpp
  bhv_emergency.cpp
  bhv_go_to_point_look_ball.cpp
  bhv_scan_field.cpp
  body_advance_ball2009.cpp
  body_clear_ball2009.cpp
  body_dribble2008.cpp
  body_go_to_point.cpp
  body_go_to_point_dodge.cpp
  body_hold_ball2008.cpp
  body_intercept2009.cpp
  body_kick_one_step.cpp
  body_kick_to_relative.cpp
  body_pass.cpp
  body_smart_kick.cpp
  body_stop_ball.cpp
  body_stop_dash.cpp
  intention_dribble2008.cpp
  intention_time_limit_action.cpp
  kick_table.cpp
  neck_scan_field.cpp
  neck_scan_players.cpp
  neck_turn_to_ball_and_player.cpp
  neck_turn_to_ball_or_scan.cpp
  neck_turn_to_goalie_or_scan.cpp
  neck_turn_to_player_or_scan.cpp
  neck_turn_to_low_conf_teammate.cpp
  view_synch.cpp
  )

target_include_directories(basic_actions
  PUBLIC
    ${Boost_INCLUDE_DIRS}
    ${LIBRCSC_INCLUDE_DIR}
  PRIVATE
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_BINARY_DIR}
  )
