
noinst_PROGRAMS = sample_coach

sample_coach_CPPFLAGS = -I$(top_srcdir)/src
sample_coach_CXXFLAGS = -W -Wall
sample_coach_LDFLAGS =
sample_coach_LDADD =

sample_coach_SOURCES = \
	sample_freeform_message.cpp \
	sample_coach.cpp \
	main_coach.cpp

noinst_HEADERS = \
	sample_freeform_message.h \
	sample_coach.h
